# Grafico_Dinamico_tensao_potenciometro

./: .gitignore  ESP32MultiCore.ino  README.md  pyproject.toml
Python_Files/: Grafico_ADC_Potenciometro.py  Grafico_potenciometro_sensor_angulo.py  Grafico_tensao_Potenciometro.py
Sketch_esp32_potenciometro/: potenciometro_esp32_Sketch.fzz
src/: main.cpp
